--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
   },
   "homepage": "https://github.com/TheOdinProject/javascript-exercises#readme",
   "devDependencies": {
+    "eslint": "7.32.0",
+    "eslint-config-airbnb-base": "14.2.1",
+    "eslint-config-node": "4.1.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "3.4.1",
     "jest": "^26.6.3",
     "jest-cli": "^26.6.3",
-    "eslint": "^7.26.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1"
+    "prettier": "2.5.1"
   },
   "scripts": {
     "test": "jest"
@@ -26,7 +31,7 @@
   "eslintConfig": {
     "root": true
   },
-   "jest": {
+  "jest": {
     "testPathIgnorePatterns": [
       "generator-exercise/"
     ]
